--- a/charts/mcp-s/Chart.yaml
+++ b/charts/mcp-s/Chart.yaml
@@ -5,7 +5,7 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.1.20
+version: 0.1.21
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
@@ -30,6 +30,10 @@ dependencies:
     version: "x.x.x"
     repository: "file://../mcp-s-run"
     condition: run.enabled
+  - name: grafana
+    version: "x.x.x"
+    repository: "file://../mcp-s-grafana"
+    condition: grafana.enabled
   - name: postgresql
     version: "16.7.12"
     repository: "oci://registry-1.docker.io/bitnamicharts"
