--- a/charts/mcp-s-connect/values.yaml
+++ b/charts/mcp-s-connect/values.yaml
@@ -27,3 +27,12 @@ PORT: "3000"
 AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
 DEBUG: "true"
 ON_PREM: "true"
+env:
+  AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
+  DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+  DB_BASE_URL: http://mcp-s-db-service
+  NEXTAUTH_URL: https://mcp-s-connect.mcp-s.com
+  PORT: "3000"
+  AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
+  DEBUG: "true"
+  ON_PREM: "true"
