--- a/charts/mcp-s-db-service/values.yaml
+++ b/charts/mcp-s-db-service/values.yaml
@@ -30,3 +30,15 @@ AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
 RATE_LIMIT_MAX: "1000"
 RATE_LIMIT_WINDOW: "60000"
 ENCRYPTION_KEY: iL7wUJhqRMPFY0asXqLAn1JjW9kv0OqC4NHtqKHt5VY=
+env:
+  DATABASE_URL: postgres://postgres:postgres@postgres-postgresql:5432/postgres?sslmode=disable
+  POSTGRES_HOST_AUTH_METHOD: trust
+  PORT: "3000"
+  DEBUG_QUERIES: "true"
+  ON_PREM: "true"
+  AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+  CONNECT_URL: https://mcp-s-connect.mcp-s.com
+  AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
+  RATE_LIMIT_MAX: "1000"
+  RATE_LIMIT_WINDOW: "60000"
+  ENCRYPTION_KEY: iL7wUJhqRMPFY0asXqLAn1JjW9kv0OqC4NHtqKHt5VY=
