--- a/charts/mcp-s-run/values.yaml
+++ b/charts/mcp-s-run/values.yaml
@@ -22,3 +22,7 @@ overlay: overlays/on-prem
 DB_SERVICE_URL: http://mcp-s-db-service
 PORT: "3000"
 AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+env:
+  DB_SERVICE_URL: http://mcp-s-db-service
+  PORT: "3000"
+  AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
