--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -1,4 +1,7 @@
+# To control the output of the manifests, you can use the following properties in the globals section:
+# FYI helm chart has the concept globals but it's with the property name "global" and not "globals"
 # globals:
+#  addStandardHeaders: false # by default it's true, `true` will add the standard helm headers to the manifests
 #  namespace: "namespace"
 #  namePrefix: "namePrefix"
 #  nameSuffix: "nameSuffix"
@@ -19,12 +22,13 @@
 #      version: "v1"
 #      kind: "Resource"
 overlay: overlays/on-prem
-DB_BASE_URL: http://mcp-s-db-service
-AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
-DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
-NEXTAUTH_URL: https://mcp-s-app.mcp-s.com
-PORT: "3000"
-ON_PREM: "true"
-NEXTAUTH_SECRET: Qw8rTz2vXy5pLm9nJk4sVb7cHn3dZx1aE6uYqPoRtS8w=
-NEXTAUTH_DEBUG: "true"
-NEXT_PUBLIC_CONNECT_URL: https://mcp-s-connect.mcp-s.com
+env:
+  DB_BASE_URL: http://mcp-s-db-service
+  AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
+  DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+  NEXTAUTH_URL: https://mcp-s-app.mcp-s.com
+  PORT: "3000"
+  ON_PREM: "true"
+  NEXTAUTH_SECRET: Qw8rTz2vXy5pLm9nJk4sVb7cHn3dZx1aE6uYqPoRtS8w=
+  NEXTAUTH_DEBUG: "true"
+  NEXT_PUBLIC_CONNECT_URL: https://mcp-s-connect.mcp-s.com
