--- a/charts/mcp-s-connect/values.yaml
+++ b/charts/mcp-s-connect/values.yaml
@@ -1,4 +1,7 @@
+# To control the output of the manifests, you can use the following properties in the globals section:
+# FYI helm chart has the concept globals but it's with the property name "global" and not "globals"
 # globals:
+#  addStandardHeaders: false # by default it's true, `true` will add the standard helm headers to the manifests
 #  namespace: "namespace"
 #  namePrefix: "namePrefix"
 #  nameSuffix: "nameSuffix"
@@ -19,11 +22,12 @@
 #      version: "v1"
 #      kind: "Resource"
 overlay: overlays/on-prem
-AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
-DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
-DB_BASE_URL: http://mcp-s-db-service
-NEXTAUTH_URL: https://mcp-s-connect.mcp-s.com
-PORT: "3000"
-AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
-DEBUG: "true"
-ON_PREM: "true"
+env:
+  AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
+  DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+  DB_BASE_URL: http://mcp-s-db-service
+  NEXTAUTH_URL: https://mcp-s-connect.mcp-s.com
+  PORT: "3000"
+  AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
+  DEBUG: "true"
+  ON_PREM: "true"
