--- a/charts/mcp-s-db-service/templates/result.yaml
+++ b/charts/mcp-s-db-service/templates/result.yaml
@@ -1,6 +1,5 @@
-
-{{- $all := fromYaml (include "gwnuepxrco.yamls" (dict "Values" .Values) ) }}
-{{- $kustomizeFiles := fromYaml (include "gwnuepxrco.kustomizeFiles" (dict "Values" .Values) ) }}
+{{- $all := fromYaml (include "hlmfk-0-0-6ca340c284.yamls" (dict "Values" .Values) ) }}
+{{- $kustomizeFiles := fromYaml (include "hlmfk-0-0-6ca340c284.kustomizeFiles" (dict "Values" .Values) ) }}
 
 {{- if .Values.manifests }}
 {{- range $key, $manifest := .Values.manifests }}
@@ -10,26 +9,27 @@
 {{- end }}
 
 {{- range $key, $manifest := $all.manifests }}
-{{- include "ensureMetadata" (dict "manifest" $manifest)}}
+{{- include "hlmfk-0-0.ensureMetadata" (dict "manifest" $manifest)}}
 {{- if $.Values.images }}
-  {{- include "updataImages" (dict "manifest" $manifest "images" $.Values.images)}}
+  {{- include "hlmfk-0-0.updataImages" (dict "manifest" $manifest "images" $.Values.images)}}
 {{- end}}
+{{- include "hlmfk-0-0.addStandardHeaders" (dict "manifest" $manifest "globals" $.Values.globals "Chart" $.Chart "Release" $.Release "Values" $.Values)}}
 {{- if $.Values.globals }}
-{{- include "setNamespace" (dict "manifest" $manifest "globals" $.Values.globals)}}
-{{- include "setNamePrefix" (dict "manifest" $manifest "globals" $.Values.globals)}}
-{{- include "setNameSuffix" (dict "manifest" $manifest "globals" $.Values.globals)}}
-{{- include "nameReleasePrefix" (dict "manifest" $manifest "globals" $.Values.globals "Values" $.Values)}}
-{{- include "labels" (dict "manifest" $manifest "globals" $.Values.globals)}}
-{{- include "annotations" (dict "manifest" $manifest "globals" $.Values.globals)}}
+{{- include "hlmfk-0-0.setNamespace" (dict "manifest" $manifest "globals" $.Values.globals)}}
+{{- include "hlmfk-0-0.setNamePrefix" (dict "manifest" $manifest "globals" $.Values.globals)}}
+{{- include "hlmfk-0-0.setNameSuffix" (dict "manifest" $manifest "globals" $.Values.globals)}}
+{{- include "hlmfk-0-0.nameReleasePrefix" (dict "manifest" $manifest "globals" $.Values.globals "Values" $.Values)}}
+{{- include "hlmfk-0-0.labels" (dict "manifest" $manifest "globals" $.Values.globals)}}
+{{- include "hlmfk-0-0.annotations" (dict "manifest" $manifest "globals" $.Values.globals)}}
 {{- end}}
 {{- end }}
 
 {{- if and .Values.kustomizeFiles .Values.kustomizeFiles.include }}
 {{- if .Values.kustomizeFiles.printNames}}
-{{- $kustomizeManifests := fromYaml (include "filterManifests" (dict "manifests" $kustomizeFiles.manifests "Values" $.Values))}}
-{{- include "printManifests"  $kustomizeManifests }}
+{{- $kustomizeManifests := fromYaml (include "hlmfk-0-0.filterManifests" (dict "manifests" $kustomizeFiles.manifests "Values" $.Values))}}
+{{- include "hlmfk-0-0.printManifests"  $kustomizeManifests }}
 {{- else }}
-{{- include "printManifests" $kustomizeFiles}}
+{{- include "hlmfk-0-0.printManifests" $kustomizeFiles }}
 {{- end }}
 {{- end }}
 
@@ -40,5 +40,5 @@
 {{- end }}
 {{- end }}
 
-{{- include "printManifests" $all}}
+{{- include "hlmfk-0-0.printManifests" $all }}
         
