--- a/charts/mcp-s-db-service/values.yaml
+++ b/charts/mcp-s-db-service/values.yaml
@@ -1,4 +1,7 @@
+# To control the output of the manifests, you can use the following properties in the globals section:
+# FYI helm chart has the concept globals but it's with the property name "global" and not "globals"
 # globals:
+#  addStandardHeaders: false # by default it's true, `true` will add the standard helm headers to the manifests
 #  namespace: "namespace"
 #  namePrefix: "namePrefix"
 #  nameSuffix: "nameSuffix"
@@ -19,14 +22,15 @@
 #      version: "v1"
 #      kind: "Resource"
 overlay: overlays/on-prem
-DATABASE_URL: postgres://postgres:postgres@postgres-postgresql:5432/postgres?sslmode=disable
-POSTGRES_HOST_AUTH_METHOD: trust
-PORT: "3000"
-DEBUG_QUERIES: "true"
-ON_PREM: "true"
-AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
-CONNECT_URL: https://mcp-s-connect.mcp-s.com
-AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
-RATE_LIMIT_MAX: "1000"
-RATE_LIMIT_WINDOW: "60000"
-ENCRYPTION_KEY: iL7wUJhqRMPFY0asXqLAn1JjW9kv0OqC4NHtqKHt5VY=
+env:
+  DATABASE_URL: postgres://postgres:postgres@postgres-postgresql:5432/postgres?sslmode=disable
+  POSTGRES_HOST_AUTH_METHOD: trust
+  PORT: "3000"
+  DEBUG_QUERIES: "true"
+  ON_PREM: "true"
+  AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+  CONNECT_URL: https://mcp-s-connect.mcp-s.com
+  AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
+  RATE_LIMIT_MAX: "1000"
+  RATE_LIMIT_WINDOW: "60000"
+  ENCRYPTION_KEY: iL7wUJhqRMPFY0asXqLAn1JjW9kv0OqC4NHtqKHt5VY=
