--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -23,12 +23,20 @@
 #      kind: "Resource"
 overlay: overlays/on-prem
 env:
-  DB_BASE_URL: http://mcp-s-db-service
+  DB_BASE_URL: ""
   AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
   DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
-  NEXTAUTH_URL: https://mcp-s-app.mcp-s.com
+  NEXTAUTH_URL: ""
   PORT: "3000"
-  ON_PREM: "true"
+  ON_PREM: ""
   NEXTAUTH_SECRET: Qw8rTz2vXy5pLm9nJk4sVb7cHn3dZx1aE6uYqPoRtS8w=
   NEXTAUTH_DEBUG: "true"
-  NEXT_PUBLIC_CONNECT_URL: https://mcp-s-connect.mcp-s.com
+  NEXT_PUBLIC_CONNECT_URL: ""
+  AUTH_URL: ""
+  AUTH_PROVIDER: ""
+  AUTH_KEYCLOAK_ID: ""
+  AUTH_KEYCLOAK_SECRET: ""
+  AUTH_KEYCLOAK_ISSUER: ""
+  CONNECT_URL: ""
+  RUN_URL: ""
+  ORG: ""
