--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -1,13 +1,13 @@
 name: Release Charts
 
 on:
-    # push:
-    #   branches:
-    #     - main
-    #   paths:
-    #     - 'chart/**'
-    workflow_dispatch:  
-    
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'chart/**'
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,19 +16,18 @@ jobs:
     permissions:
       contents: write
     steps:
-      
       - name: Checkout
         uses: actions/checkout@v4
         with:
           path: helm-charts
           fetch-depth: 0
-      
+
       - name: Configure Git
         working-directory: helm-charts
         run: |
           git config user.name "$GITHUB_ACTOR" --global
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com" --global
-    
+
       - name: Set up GitHub auth token
         id: github-auth-token
         uses: ./helm-charts/.github/actions/github-auth-token
@@ -56,7 +55,7 @@ jobs:
           npx helmify-kustomize build ../deployment/mcp-s-db-service/deploy --target ./charts/mcp-s-db-service --overlay-filter overlays/${{ env.OVERLAY_TO_PUBLISH }} --parametrize env=base/container.env --parametrize env=overlays/${{ env.OVERLAY_TO_PUBLISH }}/container.env --clear true --chart-version $CHART_VERSION
           npx helmify-kustomize build ../deployment/mcp-s-run/deploy --target ./charts/mcp-s-run --overlay-filter overlays/${{ env.OVERLAY_TO_PUBLISH }} --parametrize env=base/container.env --parametrize env=overlays/${{ env.OVERLAY_TO_PUBLISH }}/container.env --clear true --chart-version $CHART_VERSION
           npx helmify-kustomize build ../deployment/mcp-s-grafana/deploy --target ./charts/mcp-s-grafana --overlay-filter overlays/${{ env.OVERLAY_TO_PUBLISH }} --parametrize env=base/container.env --parametrize env=overlays/${{ env.OVERLAY_TO_PUBLISH }}/container.env --clear true --chart-version $CHART_VERSION
-      
+
       - name: Add quote to ConfigMap values
         working-directory: ./helm-charts
         run: |
@@ -98,6 +97,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Pull latest changes
+        run: git pull origin main
 
       - name: Configure git
         run: |
