--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -27,6 +27,7 @@ env:
   AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
   DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
   NEXTAUTH_URL: https://mcp-s-app.mcp-s.com
+  AUTH_URL: https://mcp-s-app.mcp-s.com
   PORT: "3000"
   ON_PREM: "true"
   NEXTAUTH_SECRET: Qw8rTz2vXy5pLm9nJk4sVb7cHn3dZx1aE6uYqPoRtS8w=
