--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -87,6 +87,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          
+      - name: Pull latest chart
+        run: |
+          git pull origin ${{ github.ref }}
 
       - name: Configure git
         run: |
