--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -1,13 +1,13 @@
 name: Release Charts
 
 on:
-    # push:
-    #   branches:
-    #     - main
-    #   paths:
-    #     - 'chart/**'
-    workflow_dispatch:  
-    
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'chart/**'
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,19 +16,18 @@ jobs:
     permissions:
       contents: write
     steps:
-      
       - name: Checkout
         uses: actions/checkout@v4
         with:
           path: helm-charts
           fetch-depth: 0
-      
+
       - name: Configure Git
         working-directory: helm-charts
         run: |
           git config user.name "$GITHUB_ACTOR" --global
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com" --global
-    
+
       - name: Set up GitHub auth token
         id: github-auth-token
         uses: ./helm-charts/.github/actions/github-auth-token
@@ -45,6 +44,19 @@ jobs:
           fetch-depth: 0
           token: ${{ steps.github-auth-token.outputs.token }}
 
+      - name: Bump Chart Version
+        working-directory: helm-charts
+        run: |
+          CHART_FILE=charts/mcp-s/Chart.yaml
+          OLD_VERSION=$(yq -r '.version' "$CHART_FILE")
+          IFS='.' read -r major minor patch <<< "$OLD_VERSION"
+          NEW_VERSION="$major.$minor.$((patch+1))"
+          echo "Bumping version: $OLD_VERSION -> $NEW_VERSION"
+          yq -i ".version = \"$NEW_VERSION\"" "$CHART_FILE"
+          git add "$CHART_FILE"
+          git commit -m "chore: bump chart version to $NEW_VERSION" || echo "No changes to commit"
+          git push origin HEAD:main
+
       - name: Create charts from services
         working-directory: ./helm-charts
         run: |
@@ -56,7 +68,6 @@ jobs:
           npx helmify-kustomize build ../deployment/mcp-s-db-service/deploy --target ./charts/mcp-s-db-service --overlay-filter overlays/${{ env.OVERLAY_TO_PUBLISH }} --parametrize env=base/container.env --parametrize env=overlays/${{ env.OVERLAY_TO_PUBLISH }}/container.env --clear true --chart-version $CHART_VERSION
           npx helmify-kustomize build ../deployment/mcp-s-run/deploy --target ./charts/mcp-s-run --overlay-filter overlays/${{ env.OVERLAY_TO_PUBLISH }} --parametrize env=base/container.env --parametrize env=overlays/${{ env.OVERLAY_TO_PUBLISH }}/container.env --clear true --chart-version $CHART_VERSION
           npx helmify-kustomize build ../deployment/mcp-s-grafana/deploy --target ./charts/mcp-s-grafana --overlay-filter overlays/${{ env.OVERLAY_TO_PUBLISH }} --parametrize env=base/container.env --parametrize env=overlays/${{ env.OVERLAY_TO_PUBLISH }}/container.env --clear true --chart-version $CHART_VERSION
-      
 
       # Replace quay.io/idan-chetrit/mcp-s-run with quay.io/idan-chetrit/run and quay.io/idan-chetrit/mcp-s-db-service with quay.io/idan-chetrit/db-service
       - name: Replace image names
@@ -87,7 +98,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
+
       - name: Pull latest chart
         run: |
           git pull origin ${{ github.ref }}
