--- a/charts/mcp-s-db-service/values.yaml
+++ b/charts/mcp-s-db-service/values.yaml
@@ -10,25 +10,25 @@
 #    key: "label"
 #  annotations:
 #    key: "annotation"
-#  images:
-#    - image: "old-image"
-#      newName: "new-image"
-#      newTag: "new-tag"
-#      digest: "digest"
-#      pullSecrets:
-#        - name: "pull-secret"
 #  resources:
 #    - name: "resource"
 #      version: "v1"
 #      kind: "Resource"
+# images:
+#  - image: "old-image"
+#    newName: "new-image"
+#    newTag: "new-tag"
+#    digest: "digest"
+#    pullSecrets:
+#      - name: "pull-secret"
 overlay: overlays/on-prem
 env:
   DATABASE_URL: postgres://postgres:postgres@postgres-postgresql:5432/postgres?sslmode=disable
   POSTGRES_HOST_AUTH_METHOD: trust
   PORT: "3000"
-  AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+  AUTH_SECRET: ZI39UlR2sN6HFZauuze0iNEZnNkF1wiOuGklm3bC8dk=
   CONNECT_URL: https://mcp-s-connect.mcp-s.com
-  AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
+  AUTO_AUTHENTICATE_TOKEN: balQgAqCpKW979XoibTYSbfCjvj7uSJK+90m0iQG5
   RATE_LIMIT_MAX: "1000"
   RATE_LIMIT_WINDOW: "60000"
   ENCRYPTION_KEY: iL7wUJhqRMPFY0asXqLAn1JjW9kv0OqC4NHtqKHt5VY=
@@ -38,3 +38,6 @@ env:
   DEBUG_QUERIES: "true"
 globals:
   addStandardHeaders: false
+  images:
+    - image: quay.io/idan-chetrit/db-service
+      newTag: 1.0.0
