--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -10,35 +10,28 @@
 #    key: "label"
 #  annotations:
 #    key: "annotation"
-#  images:
-#    - image: "old-image"
-#      newName: "new-image"
-#      newTag: "new-tag"
-#      digest: "digest"
-#      pullSecrets:
-#        - name: "pull-secret"
 #  resources:
 #    - name: "resource"
 #      version: "v1"
 #      kind: "Resource"
+# images:
+#  - image: "old-image"
+#    newName: "new-image"
+#    newTag: "new-tag"
+#    digest: "digest"
+#    pullSecrets:
+#      - name: "pull-secret"
 overlay: overlays/on-prem
 env:
   DB_BASE_URL: http://mcp-s-db-service
-  AUTH_URL: https://mcp-s-app.mcp-s.com
-  CONNECT_URL: https://mcp-s-connect.mcp-s.com
-  RUN_URL: https://run.mcp-s.com
-  AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
-  DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+  AUTH_SECRET: aUi2V5iCVqUrbrdjKty1zH4HCqszXArV9BLVU2giqhY=
+  DB_AUTH_SECRET: ZI39UlR2sN6HFZauuze0iNEZnNkF1wiOuGklm3bC8dk=
   PORT: "3000"
   NEXTAUTH_SECRET: Qw8rTz2vXy5pLm9nJk4sVb7cHn3dZx1aE6uYqPoRtS8w=
-  NEXTAUTH_DEBUG: "true"
-  AUTH_PROVIDER: ""
-  AUTH_KEYCLOAK_ID: ""
-  AUTH_KEYCLOAK_SECRET: ""
-  AUTH_KEYCLOAK_ISSUER: ""
-  AUTH_GOOGLE_ID: ""
-  AUTH_GOOGLE_SECRET: ""
   ORG: on-prem-org
   ON_PREM: "true"
 globals:
   addStandardHeaders: false
+  images:
+    - image: quay.io/idan-chetrit/mcp-s-app
+      newTag: 1.0.0
