--- a/charts/mcp-s-connect/values.yaml
+++ b/charts/mcp-s-connect/values.yaml
@@ -10,28 +10,31 @@
 #    key: "label"
 #  annotations:
 #    key: "annotation"
-#  images:
-#    - image: "old-image"
-#      newName: "new-image"
-#      newTag: "new-tag"
-#      digest: "digest"
-#      pullSecrets:
-#        - name: "pull-secret"
 #  resources:
 #    - name: "resource"
 #      version: "v1"
 #      kind: "Resource"
+# images:
+#  - image: "old-image"
+#    newName: "new-image"
+#    newTag: "new-tag"
+#    digest: "digest"
+#    pullSecrets:
+#      - name: "pull-secret"
 overlay: overlays/on-prem
 env:
-  AUTH_SECRET: Yt84QvWr9bK3MnLpC5e1ZxDoJ7gTfVsAiX0uRhNd6pU=
-  DB_AUTH_SECRET: Kd73PfXo5sL1YqZrT0e9dVbU8qWn4cMaH2jRuLtX3kE=
+  AUTH_SECRET: aUi2V5iCVqUrbrdjKty1zH4HCqszXArV9BLVU2giqhY=
+  DB_AUTH_SECRET: ZI39UlR2sN6HFZauuze0iNEZnNkF1wiOuGklm3bC8dk=
   DB_BASE_URL: http://mcp-s-db-service
-  NEXTAUTH_URL: https://mcp-s-connect.mcp-s.com
+  NEXTAUTH_URL: https://connect2.mcp-s.com
   PORT: "3000"
-  AUTO_AUTHENTICATE_TOKEN: Yp49XtVm7qN2RbLsG8cKeZwT5oDh1uMiA3vJfQxL6sE=
-  RUN_URL: https://run.mcp-s.com
+  AUTO_AUTHENTICATE_TOKEN: balQgAqCpKW979XoibTYSbfCjvj7uSJK+90m0iQG5
+  RUN_URL: https://run2.mcp-s.com
   ON_PREM: "true"
   ORG: on-prem-org
   DEBUG: "true"
 globals:
   addStandardHeaders: false
+  images:
+    - image: quay.io/idan-chetrit/mcp-s-connect
+      newTag: 1.0.0
